# django-boilerplate

./: .gitignore  README.md  pyproject.toml
boilerplate/api/: router.py
boilerplate/api/users/: serializers.py
boilerplate/boilerplate/: settings.py
boilerplate/config/: asgi.py  settings.py  urls.py  wsgi.py
boilerplate/config/settings/: __init__.py  base.py  logging.py  rest_framework.py
boilerplate/tasks/: models.py  views.py
boilerplate/tasks/migrations/: 0001_initial.py  0002_task_user.py
boilerplate/tasks/templates/tasks/: index.html
boilerplate/templates/layouts/: base.html
boilerplate/users/: managers.py  models.py
boilerplate/users/migrations/: 0001_initial.py
