[tool.poetry]
name = "django-boilerplate"
version = "0.1.0"
description = "Django boilerplate for real world projects"
authors = ["André da Silva <andre-da.silva@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.1"
djangorestframework = "^3.11.1"
markdown = "^3.2.2"
django-filter = "^2.3.0"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
